# ds-acidentes-poa

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/docs/: respostas_fase1.xlsx
notebooks/: 1-EDA.ipynb  EDA_fase1.ipynb
