[tool.poetry]
name = "ds-acidentes-poa"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
pre-commit = "^3.6.2"
black = "^24.2.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
pytest = "^8.1.1"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
